--- a/src/content/post/hello-world/index.mdx
+++ b/src/content/post/hello-world/index.mdx
@@ -11,7 +11,7 @@ Following is an example blog post written in an mdx file. You can find me @ src/
 
 ![A pug in the woods, wrapped in a blanket](./pug.jpeg)
 
-## Using some markdown elements
+## Using some markdown elements.
 
 Here we have a simple js code block.
 
